nothing rly :poop:

--- a/collaboration/gitlab.tex
+++ b/collaboration/gitlab.tex
@@ -26,7 +26,9 @@ After this was done a Wiki page was created in the shared GitLab Wiki that would
 \ofx{Can you write an initial section on this Anders?}
 
 \subsection{GitLab group work}
-What were the other members of the GitLab group doing
+What were the other members of the GitLab group doing? 
+build
+runner
 
 %Anders Merge request stuff, runners
 %Rune overall håndtering, runners
