--- a/2sprint/geo_locations.tex
+++ b/2sprint/geo_locations.tex
@@ -6,7 +6,7 @@ There are three formats of geographical coordinates; degrees minutes seconds, de
 	\item Decimal degrees(DD): 10.2083\degree
 \end{itemize}
 
-The listing below shows the conversion between the three different types of geographical coordinates. All the calculations are based on equivalent values and the results of each conversion should therefore be the input of another type.
+The listing below shows the conversion between the three different types of geographical coordinates, the conversions between DMS and DD comes from\cite{geo_converter} and the remaining are derived based on these formulas. All the calculations are based on equivalent values and the results of each conversion should therefore be the input of another type.
 
 
 \begin{itemize}
