--- a/bib.bib
+++ b/bib.bib
@@ -251,11 +251,15 @@
 	note = {Accessed 24-3-2016},
 	url ={http://junit.org/junit4/}
 }
-
-
 @MISC{cisco_geo_type,
 	author = {Cisco},
 	title = {Chapter 21: Google Earth Maps},
 	note = {Accessed 28-3-2016},
 	url ={http://www.cisco.com/c/en/us/td/docs/wireless/wcs/6-0/configuration/guide/WCS60cg/6_0google.html}
+}
+@MISC{geo_converter,
+	author = {Penn State},
+	title = {12. Geographic Coordinate Formats},
+	note = {Accessed 29-3-2016},
+	url ={https://www.e-education.psu.edu/geog482spring2/c2_p12.html}
 }
