--- a/collaboration/code_documentation.tex
+++ b/collaboration/code_documentation.tex
@@ -2,4 +2,4 @@
 Due to collaboration with other groups and to make the code easy to read for students at future semesters, there have been put in an extra effort to documentation of the code. The documentation thereof have been done by commenting on all non-trivial methods in the program, there have been commented on the general functionality of the method, each parameter, what it returns and on the exception thrown by some of the methods. In addition there are links from some methods calling classes or other methods. 
 
 When we are done commenting on the code, we generate a Java-Doc and upload it to the wiki page on GitLab, for other members of the project to see. By having used links in the comments this grants us links in the generated Java-doc for a more interactive documentation. 
-Doing this is a continuous process and will be done throughout the entire project, whenever code have undergone change as well if there have been made additions.
+Doing this is a continuous process and will be done throughout the entire project, whenever code have undergone change as well if additions have been made.
