--- a/bib.bib
+++ b/bib.bib
@@ -263,3 +263,9 @@
 	note = {Accessed 29-3-2016},
 	url ={https://www.e-education.psu.edu/geog482spring2/c2_p12.html}
 }
+@MISC{geo_types,
+	author = {MapTools},
+	title = {Symbols for degrees, minutes and seconds},
+	note = {Accessed 30-3-2016},
+	url ={https://www.maptools.com/tutorials/lat_lon/formats}
+}
