--- a/collaboration/collaboration.tex
+++ b/collaboration/collaboration.tex
@@ -14,6 +14,7 @@ a quote from the report guidelines for aSTEP\cite{guidelines}:
 	\end{itemize}
 \end{quotation}
 
+\ofx{Bin says "so far, the collaboration is on project managing and a common service gitlab. I think in the next 2 sprints, you need to consider add a collaboration on some specific functionality. do you have an idea already?"}
 This means we need to make at least two collaborations with other aSTEP groups.
 
 \input{collaboration/aSTEP_meetings}
