--- a/2sprint/client.tex
+++ b/2sprint/client.tex
@@ -1,7 +1,7 @@
 \section{Fetching Data From Cisco} \label{sec:fetch_data}
 This section aims to build a client that is able to communicate with the Cisco MSE services and the Database server. As mentioned previously, it is expected to communicate with several Cisco MSE services at a time. The client has to be built with the mindset that it will be communicating with external services that we do not have direct control of. Consequently we will have to handle external errors and unexpected behaviour without shutting the system down. 
 
-The client has to afford the flexibility of maintaining a list of connected services during run-time, such that a new Cisco MSE service can be added and removed without requiring a restart. We call this list the $fetch list$. Furthermore, we wish to impose the requirement that a Cisco MSE service has to be online and responsive when added to the list in order to avoid faults caused by erroneous input.
+The client has to afford the flexibility of maintaining a list of connected services during run-time, such that a new Cisco MSE service can be added and removed without requiring a restart. We call this list the $fetch list$. Furthermore, we wish to impose the requirement that a Cisco MSE service has to be online and responsive when added to the list in order to avoid faults caused by erroneous input. \ofx{Bin asks: "fetchlist: a list of available Cisco MSE services? in our case, it only has one, right?"}
 
 In this initial design and implementation of the client we do not wish to focus on security nor efficiency as they add another layer of complexity. Hence, certain security and efficiency-related aspects have been omitted in favour of robustness and flexibility. In particular, handling sensitive data such as IP addresses and passwords is something that has to be reconsidered in the future.
 
@@ -57,6 +57,6 @@ server.createContext("/api/add/server", httpExchange -> {
 \end{lstlisting}
 \Cref{lst:add_server} shows the essential functionality executed when a request is received on the URI $/api/add/server$. On line two we call the function VerifyHeaders, which goes through the parameters of the POST request and ensures that IP address, username and password are not empty. If the request passes this test, we then test on line 7 whether the IP address provided is valid by comparing it with a regular expression and attempting to open a connection to the service. The method $IsServerOnline()$ returns true if any response code is returned by the server. If the HTTP request passes all these tests we add the IP address to the fetch list.
 
-In order to store program configuration, we save the IP addresses and user information in a file. This is particularly helpful for debugging purposes, as we do not need to reinsert information into the program on start up. Naturally, storing sensitive information such as passwords in a file is a bad idea. However, the client is intended to have an uptime of close to 100\%, and it is as such not a necessity to store sensitive information in secondary memory in a final release. Furthermore, as the focus shifts towards security we will have to find a way to encode and store sensitive data to ensure that intruders cannot retrieve nor use any information they may find.
+In order to store program configuration, we save the IP addresses and user information in a log file. This is particularly helpful for debugging purposes, as we do not need to reinsert information into the program on start up. Naturally, storing sensitive information such as passwords in a file is a bad idea. However, the client is intended to have an uptime of close to 100\%, and it is as such not a necessity to store sensitive information in secondary memory in a final release. Furthermore, as the focus shifts towards security we will have to find a way to encode and store sensitive data to ensure that intruders cannot retrieve nor use any information they may find.
 
 The fetch list is handled by creating a fetch thread for each element. This thread is tasked with the retrieval of information, obfuscation and dispatching the information to the database. In between this sequence of operations the thread will suspend its operations by sleeping, thus making processor time available for other threads. If a connection fails repeatedly for 12 hours, the thread responsible will simply die. Using threads allow for concurrent connections with Cisco MSE services and allows the underlying operating system and compiler to optimise the program to utilize several processor cores.
