--- a/2sprint/geo_locations.tex
+++ b/2sprint/geo_locations.tex
@@ -6,7 +6,7 @@ There are three formats of geographical coordinates; degrees minutes seconds, de
 	\item Decimal degrees(DD): 10.2083\degree
 \end{itemize}
 
-The listing below shows the conversion between the three different types of geographical coordinates, the conversions between DMS and DD comes from\cite{geo_converter} and the remaining are derived based on these formulas. All the calculations are based on equivalent values and the results of each conversion should therefore be the input of another type.
+The listing below shows the conversion between the three different types of geographical coordinates. The conversions between DMS and DD comes from\cite{geo_converter} and the remaining are derived based on these formulas. All the calculations are based on equivalent values and the results of each conversion should therefore be the input of another type.
 
 
 \begin{itemize}
@@ -66,10 +66,10 @@ The listing below shows the conversion between the three different types of geog
 	\end{itemize}
 \end{itemize}
 
-It has been requested that the data we supply for the applications are in geographical coordinates, there have therefore been looked into possibilities of doing so.
-As the coordinate given from Cisco are in feet away from the fixed ${0;0}$ point, it would be possible to calculate the geographical location of a device by knowing the coordinate of ${0;0}$ and the angle of the map compared to longitude and latitude. 
+It has been requested that the data we supply for the applications are in geographical coordinates.
+As the coordinate received from Cisco MSE are in feet relative to the fixed $\{0;0\}$ point, it would be possible to calculate the geographical location of a device by knowing the coordinate of $\{0;0\}$ and the angle of the map compared to longitude and latitude. 
 
-However by using Cisco it is not necessary to make these calculations ourself since there is an option of getting the positions in geographical coordinates. This requires at least three and at most 20 geographical coordinates on each map to be inserted. By knowing at least three points, Cisco can calculate the position of each device based on the relative coordinate in comparison to the inserted locations\cite{geo_cisco}. 
-Cisco can output geographical coordinates in either the DMS of the DD format\cite{cisco_geo_type}. The application group prefers to receive the coordinates in the DD format, but since future applications may want the DMS or DDM format and conversion from DMS is the easier solution this will be chosen \ofx{we may have to correct this later on based on what we get from Cisco}.
+However, by using Cisco it is not necessary to perform these calculations as there is an option of getting the positions in geographical coordinates. This requires at least three geographical coordinates on each map to be calculalted. By having geographical coordinates for at least three points, Cisco can calculate the position of each device based on the relative coordinate in comparison to the inserted locations\cite{geo_cisco}. 
+Cisco can output geographical coordinates in either the DMS of the DD format\cite{cisco_geo_type}. It has been stated from other astep groups there is a preference for the DD format, but since future applications may want the DMS or DDM format, we will implement functionality to support the conversion. \ofx{we may have to correct this later on based on what we get from Cisco}
 
 %http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Borderless_Networks/Unified_Access/CMX/CMX_Prime.html#pgfId-1019702
