looked at test section

--- a/2sprint/unit_test.tex
+++ b/2sprint/unit_test.tex
@@ -1,15 +1,8 @@
 \section{Unit Testing}\label{sec:unit_test}
-To supply the next year students, who will continue this project, with a better understating of our code and what the essence of it is, all methods have been tested and documented. 
-The tests are necessary since there are 9 other groups depending on our code to be working.
+To ensure correctness of the code and supply future developers with a better understanding of our code, all methods have been tested and documented. 
+The tests are necessary since there are 9 other groups depending on our code to be functioning.
 
 \subsection{Testing Purpose}
-%Next year student
-The code developed in this project will be further improved and expanded on by the next year students. One of the reasons the code are being tested is, alongside good documentation, to give future students a better understanding of the code as further requirements arises for the indoor service. 
-By writing tests to the entire code, future developers may be able to start up this project with more ease. 
-This report will help them understand why some design decisions have been made and what the purpose of the system is as a whole, but what the individual methods are supposed to do will not be covered in its entirety. 
-By testing all methods such that it checks if an given input returns the expected result, will help the developers to get a clearer understanding of what the methods are supposed to do. 
-This understanding are further enhanced by the documentation that also describes the methods as explained in Section \ref{sec:code_documentation} \nameref{sec:code_documentation}. 
-
 %Debugging intern and extern
 This project involves the collaboration between 10 groups to develop the aStep platform. 
 Many of the aStep components communicates with each other by calling methods or sharing data.
@@ -23,6 +16,13 @@ A test should verify that the methods functions accordingly to the specification
 Besides uncovering bugs the test will be helpful to discover situations where the system will not function fully.
 By discovering and patching such shortcomings the systems usability will be improved together with the maintainability as the code becomes easier to understand as the test self-document themselves. \ofx{usability? maybe explain a little}
 
+%Next year student
+The code developed in this project will be further improved and expanded on by next year's students. One of the reasons the code are being tested is, alongside good documentation, to give future students a better understanding of the code as further requirements arises for the indoor service. 
+By writing tests to the entire code, future developers may be able to start up this project with more ease. 
+This report will help them understand why some design decisions have been made and what the purpose of the system is as a whole, but what the individual methods are supposed to do will not be covered in its entirety. 
+By testing all methods such that it checks if a given input returns the expected result, will help the developers to get a clearer understanding of what the methods are supposed to do. 
+This understanding is further enhanced by the documentation that also describes the methods as explained in Section \ref{sec:code_documentation} \nameref{sec:code_documentation}. 
+
 %Intern understanding group and project
 Because the tests represents how the system is expected to behave, it becomes easier for other people than the developers to read and understand the code.
 It does require that the reader possess some knowledge about the language in order to gain any insight from the tests.
@@ -30,8 +30,8 @@ The tests can also be used by the user to quickly gain an overview of a class by
 But because the test displays the expected result, the reader can be more confident about what the intentions of each method is.
 
 \subsection{Testing Method}
-The tests have been made with use of the testing library JUnit\cite{junit4}.\ofx{Bis asks: "Why JUnit? any benefits of using this?}
-Even though all none trivial methods have been tested, it was never the goal to use test driven development.
+The tests have been made using the testing library JUnit\cite{junit4}.\ofx{Bis asks: "Why JUnit? any benefits of using this?}
+Even though all non-trivial methods have been tested, it was never the goal to use test driven development.\sfx{not cause -> effect}
 Therefore the system have been supplied with tests after each class have been finished. 
 The reason for waiting with tests is that the primary focus in regards to the code, was to quickly establish some functionality. 
 By doing so it have been possible to showcase what functionality we would be able to offer early in the project.%discuss the goals, specification and responsibility of our system with the other groups.
