--- a/3sprint/chapter_doc.tex
+++ b/3sprint/chapter_doc.tex
@@ -4,3 +4,5 @@ One chapter per development cycle (i.e., one chapter per sprint) performed in th
 
 Each cycle may contain more or less of each of these elements.
 This chapter covers the “design of an application that handles a substantial part of this” and “development of a program that realizes the design”
+
+\input{3sprint/trackingsystem}
