--- a/2sprint/unit_test.tex
+++ b/2sprint/unit_test.tex
@@ -1,7 +1,7 @@
 \section{Testing and Documentation}\label{sec:unit_test}
 To ensure correctness of the code and supply future developers with a better understanding of our code, all code has been tested and documented. This is seen as a necessity as there are nine other project groups depending on the code we produce.
 
-\subsection{Testing Purpose}
+\subsection{Code Testing}
 Many of the aStep components communicate with each other by calling methods or sharing data. These dependencies introduce a requirement for correctness of code across the project. Consequently, unit tests are created to ensure functionality behaves according to the specification. The tests can be used to simulate the characteristics of the usage of the code and ensure that edge cases and unintended uses are handled properly. 
 
 Changes in an implemented component may have unforeseen obscure consequences on other components because of indirect dependencies. When such an error occurs it is helpful to have tests that catch them before the changes are shared with everyone else in the project. This is ensured by use of a common GitLab server, such that whenever a change is pushed, the entire project is compiled and all the tests will be processed. The build will be marked as erroneous if the compilation or a test fails.
@@ -10,7 +10,6 @@ The code developed in this project will be further improved and expanded on by f
 By writing tests for the entire code, future developers may be able to start working on this project with more ease. 
 This report seeks to explain design decisions and what the purpose of the system is as a whole, whereas the usage of individual methods are documented with unit tests, and the functionality of the individual methods are documented with comments.
 
-\subsection{Testing Method}
 The tests across the project have been made using the testing library JUnit\cite{junit4}.\ofx{Bis asks: "Why JUnit? any benefits of using this?} The system has been supplied with tests after the implementation of each class. Typically each method in a class is tested using the black-box method, where actual output is compared to the expected output on a predefined input.
 
 \begin{lstlisting}[caption={Testing ContinuesPuller},label={lst:test_continuespuller},language=inc_Java, mathescape]
@@ -27,7 +26,7 @@ public void testContinuesPuller1() throws Exception {
 \end{lstlisting}
 \Cref{lst:test_continuespuller} shows how unit testing is performed on the method $ContinuesPuller()$. The method is tested on the second parameter, which dictates how many requests are sent to a server. First, a service is created to simulate an external server, as seen on line 2. After this initialisation, the method is calling with parameters indicating two requests, minus one request and zero requests. The former is expected to be true, whereas the latter two are expected to return false, and the test passes if this is the case. 
 
-\section{Code Documentation} \label{sec:code_documentation}
+\subsection{Code Documentation} \label{sec:code_documentation}
 As mentioned, we have put in additional effort to document the code for future development. This has been done by explaining all non-trivial methods in the program. Specifically, for each method we have described the general functionality as well as the method signature. In addition, links are created between methods calling classes or other methods. 
 
 As we finish documenting segments of the code, we generate a Java-Doc, which is a .pdf document listing methods and their description, and upload it to the Wiki page on GitLab for other members of the project to see. The links in the comments are transferred to the Java-doc, enabling interactive documentation. 
