--- a/2sprint/chapter_doc.tex
+++ b/2sprint/chapter_doc.tex
@@ -1,7 +1,7 @@
 \chapter{Sprint 2} \label{cha:sprint2}
 In this chapter we describe the work to be done in the second sprint. 
 
-Since we have chosen to utilize Cisco MSE, which is available to us through Aalborg University, the main goal for this sprint is to create a client responsible for fetching data from Cisco MSE to the aStep database, as it can be seen in the Appendix on \cref{fig:cisco_systems}. We will also focus on testing and thoroughly documenting existing and new code. Furthermore, we will look into the possibilities of finding geographical locations rather than relative positions within a building. Finally, we plan on describing our collaborations with other groups working on the aStep project, as can be seen in \cref{sec:collaboration}, \nameref{sec:collaboration}.
+Since we have chosen to utilize Cisco MSE, which is available to us through Aalborg University, the main goal for this sprint is to create a client responsible for fetching data from Cisco MSE and sending it to the aStep database. We will also focus on testing and thoroughly documenting existing and new code. Furthermore, we will look into the possibilities of finding geographical locations rather than relative positions within a building. Finally, we plan on describing our collaborations with other groups working on the aStep project, as can be seen in \cref{sec:collaboration}, \nameref{sec:collaboration}.
 
 \input{2sprint/geo_locations}
 \input{2sprint/client}
